--- a/wiki.js/docker-compose.yml
+++ b/wiki.js/docker-compose.yml
@@ -1,16 +1,57 @@
 ---
-version: "2.1"
+version: "3"
+
 services:
-  wikijs:
-    image: lscr.io/linuxserver/wikijs:latest
-    container_name: wikijs
+  db:
+    image: postgre:latest
+    container_name: db_wikijs
     environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Etc/UTC
-    volumes:
-      - /path/to/config:/config
-      - /path/to/data:/data
-    ports:
-      - 3000:3000
+    
+    logging:
+      driver: "none"
     restart: unless-stopped
+    volumes:
+      - db-data: /var/lib/postgresql/data
+
+  wikijs:
+    image: ghcr.io/requarks/wikijs:latest
+    container_name: app_wikijs
+    depends_on:
+      - db_wikijs
+    environment:
+    ports:
+      - "3000:3000"
+    restart: unless-stopped
+
+    version: "3"
+services:
+
+  db:
+    image: postgres:15-alpine
+    environment:
+      POSTGRES_DB: wiki
+      POSTGRES_PASSWORD: wikijsrocks
+      POSTGRES_USER: wikijs
+    logging:
+      driver: "none"
+    restart: unless-stopped
+    volumes:
+      - db-data:/var/lib/postgresql/data
+
+  wiki:
+    image: ghcr.io/requarks/wiki:2
+    depends_on:
+      - db
+    environment:
+      DB_TYPE: postgres
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_USER: wikijs
+      DB_PASS: wikijsrocks
+      DB_NAME: wiki
+    restart: unless-stopped
+    ports:
+      - "80:3000"
+
+volumes:
+  db-data:
